--- a/src/main/webapp/assets/less/module/global.less
+++ b/src/main/webapp/assets/less/module/global.less
@@ -2,6 +2,12 @@
 body {
     background: @color-white-grey;
     font-family: @font-primary;
+    .inner {
+        display: none;
+    }
+    .pg-loaded > .inner {
+        display: block;
+    }
 }
 
 h1 {
